--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -7,6 +7,7 @@ $color_gray_800: #2D3748;
 $color_gray_600: #718096;
 $color_gray_500: #A0AEC0;
 $color_gray_300: #E2E8F0;
+$color_gray_200: #EDF2F7;
 $color_gray_100: #F7FAFC;
 
 $color_red_500: #F56565;
@@ -20,7 +21,7 @@ $color_text_sharp: $color_gray_100;
 
 // Button Colors
 $color_button_subtle: $color_gray_900;
-$color_button_subtle_selected: $color_gray_500;
+$color_button_subtle_selected: $color_gray_800;
 
-$color_button_default: $color_red_400;
-$color_button_default_selected: $color_red_500;
+$color_button_default: $color_red_500;
+$color_button_default_selected: $color_red_400;
