--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -14,6 +14,10 @@ $color_red_500: #F56565;
 $color_red_400: #FC8181;
 $color_red_300: #FEB2B2;
 
+// Brand Colors
+$color_brand_primary: $color_gray_900;
+$color_brand_secondary: $color_red_500;
+
 // Text Colors
 $color_text_subtle: $color_gray_500;
 $color_text_default: $color_gray_200;
