add default stylesheet

--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -24,6 +24,7 @@ $color_text_default: $color_gray_200;
 $color_text_sharp: $color_gray_100;
 
 // Button Colors
+$color_button_text: $color_black;
 $color_button_subtle: $color_gray_900;
 $color_button_subtle_selected: $color_gray_800;
 
