--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -1,4 +1,5 @@
-$font_stack: Roboto, Arial;
+$font_stack: 'Roboto', Arial;
+$font_stack_header: 'Roboto Slab', Roboto, Arial;
 
 // Font Sizes
 $font_size_xs: 0.75rem;
@@ -14,6 +15,7 @@ $font_size_4xl: 3.75rem;
 $font_weight_normal: 400;
 $font_weight_medium: 500;
 $font_weight_bold: 700;
+$font_weight_black: 900;
 
 // Font Line Heights
 $font_height_normal: normal;
