--- a/src/components/UI/Button/style.module.scss
+++ b/src/components/UI/Button/style.module.scss
@@ -1,14 +1,18 @@
-@import '../../../style/_borders.scss';
 @import '../../../style/_colors.scss';
+@import '../../../style/_typography.scss';
+@import '../../../style/_borders.scss';
 @import '../../../style/_spacing.scss';
 
 .button {
   height: 52px;
   border: none;
   background: $color_button_default;
-  color: $color_text_default;
+  color: $color_button_text;
   border-radius: $border_radius_sm;
-  padding: 0 $spacing_padding_sm;
+  padding: 0 $spacing_padding_md;
+  text-transform: uppercase;
+  font-size: $font_size_sm;
+  letter-spacing: $font_spacing_wider;
 }
 
 .button:hover {
