--- a/src/style/_spacing.scss
+++ b/src/style/_spacing.scss
@@ -1,6 +1,6 @@
-// Padding
-$spacing_padding_sm: 1.2rem;
-$spacing_padding_md: 1.6rem;
-$spacing_padding_lg: 2rem;
-$spacing_padding_xl: 2.4rem;
-$spacing_padding_2xl: 3.2rem;
+// Spacings
+$spacing_sm: 1.2rem;
+$spacing_md: 1.6rem;
+$spacing_lg: 2rem;
+$spacing_xl: 2.4rem;
+$spacing_2xl: 3.2rem;
