--- a/src/components/UI/Button/style.module.scss
+++ b/src/components/UI/Button/style.module.scss
@@ -9,7 +9,7 @@
   background: $color_button_default;
   color: $color_button_text;
   border-radius: $border_radius_sm;
-  padding: 0 $spacing_padding_md;
+  padding: 0 $spacing_md;
   text-transform: uppercase;
   font-size: $font_size_sm;
   letter-spacing: $font_spacing_wider;
