--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,13 +1,23 @@
+@import '../../style/_typography.scss';
 @import '../../style/_colors.scss';
 @import '../../style/_spacing.scss';
 
 .header {
   display: flex;
   flex-direction: row;
-  height: 70px;
+  height: 120px;
   align-items: center;
+  top: 0;
+  position: absolute;
 }
 
 .nav-item {
   margin-right: $spacing_lg;
+  color: $color_text_subtle;
+  font-weight: $font_weight_medium;
+}
+
+.nav-item--active {
+  font-weight: $font_weight_bold;
+  color: $color_text_sharp;
 }
