--- a/src/components/UI/Button/style.module.scss
+++ b/src/components/UI/Button/style.module.scss
@@ -13,6 +13,7 @@
   text-transform: uppercase;
   font-size: $font_size_sm;
   letter-spacing: $font_spacing_wider;
+  text-align: center;
 }
 
 .button:hover {
