--- a/src/components/UI/Spinner/style.module.scss
+++ b/src/components/UI/Spinner/style.module.scss
@@ -6,6 +6,7 @@
   border-radius: 50%;
   border: 4px solid $color_brand_secondary;
   border-top: 4px solid $color_brand_primary;
+  margin: 0 auto;
   animation: rotate 0.6s linear infinite;
 }
 
