modify styles for home page content

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -12,7 +12,7 @@
 }
 
 .nav-item {
-  margin-right: $spacing_lg;
+  margin-right: $spacing_xl;
   color: $color_text_subtle;
   font-weight: $font_weight_medium;
 }
