add styles for mobile breakpoints, refactor movie controls to own component, add more sass vars

--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   max-width: $site_max_width;
   margin: 0 auto;
-  padding: 0 $spacing_md;
+  padding: 0 $spacing_lg;
   position: relative;
   align-items: stretch;
 }
