--- a/src/style/_zIndices.scss
+++ b/src/style/_zIndices.scss
@@ -5,4 +5,5 @@ $zindex_base: 0;
 $zindex_dropdown: 10;
 $zindex_banner: 20;
 $zindex_toast: 30;
-$zindex_tooltip: 40;
+$zindex_overlay: 40;
+$zindex_tooltip: 50;
