--- a/src/style/_spacing.scss
+++ b/src/style/_spacing.scss
@@ -1,6 +1,10 @@
 // Spacings
+$spacing_2xs: 0.4rem;
+$spacing_xs: 0.8rem;
 $spacing_sm: 1.2rem;
 $spacing_md: 1.6rem;
 $spacing_lg: 2rem;
 $spacing_xl: 3rem;
 $spacing_2xl: 5rem;
+$spacing_3xl: 8rem;
+$spacing_4xl: 16rem;
