--- a/src/components/Poster/style.module.scss
+++ b/src/components/Poster/style.module.scss
@@ -3,10 +3,19 @@
 .poster {
   width: 100%;
   max-height: 420px;
-  height: 100%;
+  height: 380px;
   margin: 0 auto;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: $border_radius_sm;
+}
+
+.large {
+  height: 440px;
+}
+
+.small {
+  height: 320px;
+  width: 220px;
 }
