fix typo on import

--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -1,7 +1,7 @@
 @import '../../style/_main.scss';
 @import '../../style/_spacing.scss';
 @import '../../style/_colors.scss';
-@import '../../style/_zindices.scss';
+@import '../../style/_zIndices.scss';
 
 .layout {
   height: 100vh;
