--- a/src/components/MovieControls/style.module.scss
+++ b/src/components/MovieControls/style.module.scss
@@ -15,7 +15,7 @@
   flex-direction: row;
   left: 50%;
   transform: translateX(-50%);
-  padding: $spacing_sm;
+  padding: $spacing_xs;
   z-index: $zindex_overlay;
   justify-content: space-between;
 }
