--- a/src/components/UI/Button/style.module.scss
+++ b/src/components/UI/Button/style.module.scss
@@ -13,7 +13,7 @@
   font-size: $font_size_sm;
   letter-spacing: $font_spacing_wider;
   text-align: center;
-  width: 100%;
+  width: auto;
 }
 
 .emphasized {
@@ -34,7 +34,7 @@
 }
 
 .small {
-  height: 42px;
+  height: 44px;
 }
 
 .large {
