--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -9,10 +9,14 @@
 
 .page-controls {
   display: flex;
-  width: 100%;
+  width: auto;
   align-items: center;
   justify-content: center;
   margin-top: $spacing_md;
+}
+
+.page-controls .button {
+  width: auto;
 }
 
 .movie-page,
