--- a/src/components/Movie/style.module.scss
+++ b/src/components/Movie/style.module.scss
@@ -1,4 +1,5 @@
 @import '../../style/_typography.scss';
+@import '../../style/_main.scss';
 @import '../../style/_spacing.scss';
 @import '../../style/_colors.scss';
 
@@ -59,6 +60,22 @@
 
 .link {
   width: 100%;
+}
+
+@media (min-width: $breakpoint_md) {
+  .movie {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .movie-left {
+    width: 430px;
+  }
+
+  .movie-right {
+    width: 50%;
+    padding: $spacing_xl;
+  }
 }
 
 @keyframes slideUp {
