--- a/src/components/MovieControls/style.module.scss
+++ b/src/components/MovieControls/style.module.scss
@@ -10,7 +10,7 @@
   background: rgba(0, 0, 0, 0.90);
   position: fixed;
   bottom: 20px;
-  width: 260px;
+  width: auto;
   display: flex;
   flex-direction: row;
   left: 50%;
@@ -20,6 +20,6 @@
   justify-content: space-between;
 }
 
-.controls button {
-  width: 48%;
+.controls button:nth-child(2) {
+  margin-left: $spacing_2xs;
 }
