--- a/src/components/Movie/style.module.scss
+++ b/src/components/Movie/style.module.scss
@@ -62,6 +62,10 @@
   width: 100%;
 }
 
+.movie-left {
+  height: 50vh;
+}
+
 @media (min-width: $breakpoint_md) {
   .movie {
     display: flex;
@@ -70,6 +74,7 @@
 
   .movie-left {
     width: 430px;
+    height: 640px;
   }
 
   .movie-right {
